--- a/css/style.css
+++ b/css/style.css
@@ -404,7 +404,7 @@ img {
 	font-weight: bolder;
 	font-style: normal;
 	font-size: 32px;
-	color: #edc343;
+	color: #bb8d03;
 	margin: 16px;
 	text-align: center;
 }
@@ -414,12 +414,12 @@ img {
 	text-transform: uppercase;
 	letter-spacing: 5px;
 	font-size: 24px;
-	color: #edc343;
+	color: #bb8d03;
 	margin-top: 5px;
 }
 
 .title p {
-	color: #edc343;
+	color: #bb8d03;
 	margin: 30px 0 20px;
 	text-transform: uppercase;
 	letter-spacing: 3px;
@@ -437,6 +437,7 @@ img {
 	align-items: center;
 	/* padding: 20px; */
 	text-align: center;
+	color: #f0b501;
 	/* min-height:100%; */
 }
 
@@ -466,9 +467,10 @@ body {
 	width: auto;
 	height: auto;
 	padding: 20px;
-	background-color: #eee;
+	background-color: #ed0c6d;
 	border-radius: 20px;
 	font-size: 16px;
+	color: #fff;
 }
 
 .venue {
@@ -501,7 +503,8 @@ body {
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	color: #fff;
+	color: #f0b501;
+	background: #f0b501;
 }
 
 .days {
